Update src/main/java/com/vibevault/userservice/services/AuthServiceImpl.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>